--- a/t/README
+++ b/t/README
@@ -421,6 +421,9 @@ GIT_TEST_DISALLOW_ABBREVIATED_OPTIONS=<boolean>, when true (which is
 the default when running tests), errors out when an abbreviated option
 is used.
 
+GIT_TEST_DEFAULT_HASH=<sha1|sha256> specifies which hash algorithm to use
+in the test scripts.
+
 Naming Tests
 ------------
 
